# icp-prospector

./: .gitignore  PRD.md  RALPH_DONE  RALPH_PROMPT.md  README.md  pyproject.toml  requirements.txt  run-and-notify.sh  run.py
.github/workflows/: ci.yml
config/: icp.example.yaml
prospector/: __init__.py  __main__.py  cli.py  config.py  deduplicator.py  enricher.py  http.py  models.py  run.py  scorer.py  state.py  utils.py
prospector/outputs/: __init__.py  csv_writer.py  report.py  sheets.py  summary.py
prospector/sources/: __init__.py  base.py  hacker_news.py  indie_hackers.py  product_hunt.py  reddit.py  x_search.py
tests/: test_config.py  test_deduplicator.py  test_enricher.py  test_reddit_source.py  test_scorer.py
